Scrollbar color standardization; library style fix

--- a/src/app/App.less
+++ b/src/app/App.less
@@ -94,7 +94,7 @@ body {
 }
 
 ::-webkit-scrollbar-track {
-  background: #eaede7; //d3d6d0;
+  background: rgba(255,255,255,0.15);
   border-radius: 7px;
   margin: 5px 3px;
 }
@@ -104,7 +104,7 @@ body {
 }
 
 ::-webkit-scrollbar-thumb {
-  background: #C7CAC9;
+  background: rgba(255,255,255,0.25);
   border-radius: 10px;
   // border-top: 1px solid #c1d1af;
   // border-bottom: 1px solid #c1d1af;
